add git color and cmd push

--- a/styls/blog.css
+++ b/styls/blog.css
@@ -26,3 +26,7 @@ p{
     text-align: justify;
     background-color: antiquewhite;
 }
+.gitpush{
+    color: rgb(7, 94, 7);
+    font-weight: 800;
+}
